--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "cd ./client && webpack -p --progress && cd .. && node ./bin/www"
+    "start": "npm run build:production && ./node_modules/.bin/forever ./bin/www",
+    "start:development": "concurrently --kill-others \" cd client && npm start \" \" cd node_modules/.bin && nodemon ../.././bin/www \" ",
+    "build:production": "cd ./client && webpack -p --progress && cd .. "
   },
   "author": "Arpit Goyal <arpit.go4@gmail.com> (http://github.com/arpitgo4)",
   "dependencies": {
@@ -12,11 +14,13 @@
     "debug": "~2.6.0",
     "ejs": "^2.5.6",
     "express": "~4.14.1",
+    "forever": "^0.15.3",
     "mongoose": "^4.9.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.2"
   },
   "devDependencies": {
+    "concurrently": "^3.4.0",
     "nodemon": "^1.11.0"
   }
 }
