--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "forever": "^0.15.3",
     "mongoose": "^4.9.0",
     "morgan": "~1.7.0",
+    "react-router": "^4.0.0",
     "serve-favicon": "~2.3.2"
   },
   "devDependencies": {
