--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "npm run build:production && ./node_modules/.bin/forever ./bin/www",
-    "start:development": "./node_modules/.bin/nodemon ./bin/www",
+    "start:development": "./node_modules/.bin/nodemon --ignore 'client/' ./bin/www",
     "build:production": "cd ./client && webpack -p --progress && cd .. ",
     "start:development_conc": "concurrently --kill-others \" cd client && npm start \" \" cd node_modules/.bin && nodemon ../.././bin/www \" "
   },
