--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^0.14.6",
     "react-redux": "^5.0.3",
     "react-router": "^4.0.0",
+    "react-router-dom": "^4.0.0",
     "redux": "^3.6.0",
     "style-loader": "^0.13.2",
     "superagent": "^3.5.0",
