--- a/package.json
+++ b/package.json
@@ -3,25 +3,63 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "npm run build:production && ./node_modules/.bin/forever ./bin/www",
+    "start": "npm run build-client:production && ./node_modules/.bin/forever ./bin/www",
     "start:development": "./node_modules/.bin/nodemon --ignore 'client/' ./bin/www",
-    "build:production": "cd ./client && webpack -p --progress && cd .. ",
-    "start:development_conc": "concurrently --kill-others \" cd client && npm start \" \" cd node_modules/.bin && nodemon ../.././bin/www \" "
+    "build-client:production": "cd ./client && webpack -p --progress && cd .. "
   },
+  "repository": {
+    "type": "git"
+  },
+  "keywords": [
+    "react",
+    "reactjs",
+    "boilerplate",
+    "hot",
+    "reload",
+    "hmr",
+    "live",
+    "edit",
+    "webpack"
+  ],
   "author": "Arpit Goyal <arpit.go4@gmail.com> (http://github.com/arpitgo4)",
   "dependencies": {
     "body-parser": "~1.16.0",
+    "bootstrap": "^3.3.7",
     "cookie-parser": "~1.4.3",
+    "css-loader": "^0.27.1",
     "debug": "~2.6.0",
     "ejs": "^2.5.6",
     "express": "~4.14.1",
+    "file-loader": "^0.10.1",
     "forever": "^0.15.3",
+    "http-proxy-middleware": "^0.17.4",
+    "jquery": "^3.1.1",
     "mongoose": "^4.9.0",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.2"
+    "react": "^0.14.6",
+    "react-redux": "^5.0.3",
+    "react-router": "^3.0.2",
+    "redux": "^3.6.0",
+    "serve-favicon": "~2.3.2",
+    "style-loader": "^0.13.2",
+    "superagent": "^3.5.0",
+    "url-loader": "^0.5.8"
   },
   "devDependencies": {
-    "concurrently": "^3.4.0",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "babel-core": "^6.0.20",
+    "babel-eslint": "^4.1.3",
+    "babel-loader": "^6.0.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-es2015": "^6.0.15",
+    "babel-preset-react": "^6.0.15",
+    "babel-preset-stage-0": "^6.0.15",
+    "eslint": "^1.10.3",
+    "eslint-plugin-react": "^3.6.2",
+    "express": "^4.13.4",
+    "react-hot-loader": "^1.3.0",
+    "webpack": "^1.12.2",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.10.0"
   }
 }
