--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build-client:production": "cd ./client && webpack -p --progress && cd .. "
   },
   "repository": {
-    "type": "git"
+    "type": "git",
+    "url": "https://github.com/arpitgo4/Express-React-Scaffholding"
   },
   "keywords": [
     "react",
