--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "npm run build-client:production && ./node_modules/.bin/forever ./bin/www",
-    "start:development": "./node_modules/.bin/nodemon --ignore 'client/' ./bin/www",
-    "build-client:production": "cd ./client && webpack -p --progress && cd .. "
+    "start": "npm run build-client:production && forever ./bin/www",
+    "start:development": "nodemon --ignore 'client/' ./bin/www",
+    "build-client:production": "webpack -p --progress"
   },
   "repository": {
     "type": "git",
@@ -38,6 +38,7 @@
     "mongoose": "^4.9.0",
     "morgan": "~1.7.0",
     "react": "^0.14.6",
+    "react-dom": "^0.14.6",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
